src/main/java/com/example/restpolygon/error/dto/ErrorResponseDto.java
package com.example.restpolygon.error.dto;

import io.swagger.v3.oas.annotations.media.Schema;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.http.HttpStatus;

import java.util.UUID;

@Data
@Builder
@AllArgsConstructor
@NoArgsConstructor
public class ErrorResponseDto {

	private UUID id;
	private HttpStatus errorCode;
	private String errorMessage;
}
